General updates have been completed